# StormWater-AI

./: LICENSE  README.md  ai-analyzer.ts  ai-performance-report.md  ai-technical-implementation.md  bug-tracking-log.md  chat-service-plugin.ts  chat-service.ts  cost-estimation-plugin.ts  current-status-and-issues.md  development-roadmap.md  document-exporter.ts  document-generator-fix.ts  document-generator-plugin.ts  document-generator.ts  document-generator.ts.backup  documentation.md  environmental-monitoring-plugin.ts  generate_documentation_pdfs.py  generate_pdf_report.py  index.html  package-lock.json  package.json  plugin-manager.ts  plugin-registry.ts  push-to-github.sh  recommendation-generator.ts  regulatory-compliance-plugin.ts  risk-assessment-plugin.ts  routes.ts  site-planning-plugin.ts  storage.ts  stormwater-ai-documentation.txt  stormwater-analysis-plugin.ts  system-architecture-complete.md  training-certification-plugin.ts  truth-statement.html  tsconfig.json
docs/: ai-system-overview.md  replit.md
python/: create_pdf.py  pyproject.toml  simple_pdf_generator.py
src/: ai-analyzer.ts  chat-service-plugin.ts  cost-estimation-plugin.ts  document-exporter.ts  document-generator-fix.ts  document-generator-plugin.ts  document-generator.ts  document-processor.ts  environmental-monitoring-plugin.ts  index.html  plugin-registry.ts  python-interpreter.ts  recommendation-generator.ts  regulatory-compliance-plugin.ts  risk-assessment-plugin.ts  routes.ts  schema.ts  site-planning-plugin.ts  storage.ts  stormwater-analysis-plugin.ts  vite.config.ts  vite.ts  (+2 more)
